feat: add database connection

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,15 @@
     "browser": false
   },
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "radix": "off",
+    "import/no-extraneous-dependencies": [
+      "off",
+      {
+        "devDependencies": false,
+        "optionalDependencies": false,
+        "peerDependencies": false
+      }
+    ]
   }
 }
