--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^3.6.1",
+    "sequelize": "^6.33.0"
   }
 }
