--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
   "root": true,
-  "extends": ["airbnb", "airbnb-typescript"],
+  "extends": [
+    "airbnb",
+    "airbnb-typescript"
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
@@ -11,6 +14,8 @@
   "rules": {
     "no-console": "off",
     "radix": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "off",
     "import/no-extraneous-dependencies": [
       "off",
       {
