--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.49.0",
     "express": "^4.17.1",
     "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "winston": "^3.10.0"
   }
 }
