--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "@types/multer": "^1.4.7",
+    "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -26,11 +28,14 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "aws-sdk": "^2.1457.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "express": "^4.17.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0",
+    "uuid": "^9.0.1",
     "winston": "^3.10.0"
   }
 }
