--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "no-console": "off",
     "radix": "off",
     "no-shadow": "off",
+    "no-param-reassign": "off",
     "@typescript-eslint/no-shadow": "off",
     "import/no-extraneous-dependencies": [
       "off",
